Updates and bug fixes.

--- a/edu.columbia.rdf.matcalc.toolbox.regions.app/user.settings.json
+++ b/edu.columbia.rdf.matcalc.toolbox.regions.app/user.settings.json
@@ -1,7 +1,17 @@
 [
   {
-    "name":"org\/matcalc\/toolbox\/bio\/regions\/nway\/one-way", 
-    "value":false, 
+    "name":"matcalc\/import\/file\/has-header", 
+    "value":true, 
+    "description":""
+  },
+  {
+    "name":"matcalc\/import\/file\/skip\/lines", 
+    "value":true, 
+    "description":""
+  },
+  {
+    "name":"matcalc\/import\/file\/skip\/matches", 
+    "value":"#,@,$", 
     "description":""
   }
 ]
